--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,8 +1,8 @@
 # Read the Docs configuration file for MkDocs projects
-version: 2
+version: 0
 
 build:
-  os: ubuntu-2.04
+  os: "ubuntu-20.04"
   tools:
     python: "3.12"
 
